Bug 246262 - "switching burn speed down 4 200x"
Summary: "switching burn speed down 4 200x"
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (show other bugs)
Version: 2.0.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Michał Małek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-30 13:56 UTC by Toralf Förster
Modified: 2010-08-15 13:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
screen shot (147.84 KB, image/jpeg)
2010-07-30 13:56 UTC, Toralf Förster
Details
debug output (24.98 KB, application/octet-stream)
2010-07-30 13:56 UTC, Toralf Förster
Details
k3b stderr output (17.67 KB, application/octet-stream)
2010-07-30 13:57 UTC, Toralf Förster
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Toralf Förster 2010-07-30 13:56:12 UTC
Created attachment 49673 [details]
screen shot

Version:           2.0.0 (using KDE 4.4.5) 
OS:                Linux

While burning an about 200 MB file oto a CD-R I read the output (pls see attached screen shot and was wondering what that means.

Reproducible: Didn't try




OS: Linux (i686) release 2.6.34.1
Compiler: i686-pc-linux-gnu-gcc
Comment 1 Toralf Förster 2010-07-30 13:56:37 UTC
Created attachment 49674 [details]
debug output
Comment 2 Toralf Förster 2010-07-30 13:57:21 UTC
Created attachment 49675 [details]
k3b stderr output

got with "grep k3b .xsession-errors > k3b.xsession-errors"
Comment 3 Sebastian Trueg 2010-08-15 13:37:46 UTC
SVN commit 1163931 by trueg:

* Properly compare writing speeds: use 0.5*speedMultiplicator as the minimum difference necessary for a message.
* Properly format the writing speed when informing the user of a change in the speed.

BUG: 246262
BUG: 243482


 M  +7 -7      k3bcdrecordwriter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1163931