* Properly compare writing speeds: use 0.5*speedMultiplicator as the minimum difference necessary for a message. * Properly format the writing speed when informing the user of a change in the speed.

BUG: 246262
BUG: 243482

svn path=/trunk/extragear/multimedia/k3b/; revision=1163931